[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/title_scene/title_scene.gd" type="Script" id=1]
[ext_resource path="res://levels/components/Fade.tscn" type="PackedScene" id=2]

[node name="TitleScene" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Options" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="CanvasLayer/Options"]
margin_right = 82.0
margin_bottom = 20.0
text = "Continue"

[node name="NewGame" type="Button" parent="CanvasLayer/Options"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "New Game"

[node name="WarningPrompt" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 1.0
margin_top = 51.0
margin_right = 443.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningText" type="Label" parent="CanvasLayer/WarningPrompt"]
margin_right = 442.0
margin_bottom = 14.0
text = "Are you sure you want to create a new game? This cannot be undone."

[node name="Confirm" type="Button" parent="CanvasLayer/WarningPrompt"]
margin_top = 18.0
margin_right = 442.0
margin_bottom = 38.0
text = "YES"

[node name="Cancel" type="Button" parent="CanvasLayer/WarningPrompt"]
margin_top = 42.0
margin_right = 442.0
margin_bottom = 62.0
text = "NO"

[node name="DifficultyPrompt" type="Control" parent="CanvasLayer"]
margin_top = 122.0
margin_right = 320.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultySelect" type="HBoxContainer" parent="CanvasLayer/DifficultyPrompt"]
margin_right = 149.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="CanvasLayer/DifficultyPrompt/DifficultySelect"]
margin_right = 40.0
margin_bottom = 40.0
toggle_mode = true
text = "Easy"

[node name="Normal" type="Button" parent="CanvasLayer/DifficultyPrompt/DifficultySelect"]
margin_left = 44.0
margin_right = 103.0
margin_bottom = 40.0
toggle_mode = true
text = "Normal"

[node name="Hard" type="Button" parent="CanvasLayer/DifficultyPrompt/DifficultySelect"]
margin_left = 107.0
margin_right = 149.0
margin_bottom = 40.0
toggle_mode = true
text = "Hard"

[node name="DifficultyConfirm" type="HBoxContainer" parent="CanvasLayer/DifficultyPrompt"]
margin_left = 16.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="CanvasLayer/DifficultyPrompt/DifficultyConfirm"]
margin_right = 62.0
margin_bottom = 31.0
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="CanvasLayer/DifficultyPrompt/DifficultyConfirm"]
margin_left = 66.0
margin_right = 120.0
margin_bottom = 31.0
text = "Cancel"

[node name="Fade" parent="CanvasLayer" instance=ExtResource( 2 )]
